--- a/static/css/main.css
+++ b/static/css/main.css
@@ -30,3 +30,76 @@ a:visited
 	text-decoration: none;
 }
 
+/* Case quizzes */
+
+.cases {
+  min-height: 20px;
+  padding: 3px;
+  margin-bottom: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  -webkit-border-radius: 4px;
+     -moz-border-radius: 4px;
+          border-radius: 4px;
+}
+
+.casetitle
+{
+    background-color: #e6f2d8;
+    margin: 0;
+    padding: 5px 10px;
+    border: 0;
+    font-weight: bold;
+  -webkit-border-top-left-radius: 4px;
+     -moz-border-top-left-radius: 4px;
+          border-top-left-radius: 4px;
+  -webkit-border-top-right-radius: 4px;
+     -moz-border-top-right-radius: 4px;
+          border-top-right-radius: 4px;
+}
+
+.casecontent
+{
+    margin: 10px;
+    padding: 0;
+    border: 0;
+}
+
+.casequestion
+{
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+
+.cases li
+{
+    margin: 3px 0;
+}
+
+.cases textarea {
+    width: 90% !important;
+}
+
+.casesanswerdisplay {
+    margin: 0;
+    padding: 5px;
+    border: 1px solid #999;
+    line-height: 18px;
+}
+
+.casequestionexplanationheader, .q-mod5 {
+    display: none;
+}
+
+.hide-feedback .casesanswerdisplay,
+.hide-feedback .caseanswerexplanation,
+.hide-feedback .caseanswerresult {
+    display: none;
+}
+
+.response-heading {
+    font-weight: bold;
+    margin-bottom: 10px;
+}
