Initial theming for section pages. No detailed inspections yet.

--- a/themes/ctl-book/layouts/partials/banner.html
+++ b/themes/ctl-book/layouts/partials/banner.html
@@ -4,6 +4,6 @@
         <a href="{{ .Site.BaseURL }}" class="navbar-brand" id="primary-logo"><img src="{{ .Site.BaseURL }}img/logo-primary.png" alt="Go to {{ .Site.Params.shortTitle }} home page" /></a>
         <div id="secondary-logo"><img src="{{ .Site.BaseURL }}img/logo-secondary.png" alt="This project is part of the Uncharted Dental Education program" /></div>
     </div>
-    <h1 id="front-page-banner"><span class="sr-only">{{ .Site.Title }}</span></h1>
+    <h1 id="page-banner"><span class="sr-only">{{ .Site.Title }}</span></h1>
     <div id="gradient-teal"></div>
 </header>
