--- a/themes/ctl-book/layouts/partials/header.html
+++ b/themes/ctl-book/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!-- PASS -->
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -7,7 +7,7 @@
     {{ "<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->" | safeHTML }}
     {{ .Hugo.Generator }}
 
-    <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Site.Params.shortTitle }} : {{ .Title }}{{ end }}</title>
+    <title>{{ if .IsHome }}{{ .Site.Title }}{{ else }}{{ .Site.Params.shortTitle }}: {{ .Title }}{{ end }}</title>
     
     {{ "<!-- Bootstrap CSS -->" | safeHTML }}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -20,22 +20,23 @@
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/{{.Site.Params.customCSS }}" />
     {{ end }}
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    {{ `<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <![endif]-->` | safeHTML }}
     
     {{ partial "meta.html" . }}
+
     {{ partial "favicon.html" . }}
 
 </head>
-<body>
+<body {{ if .IsHome }}{{ else }}class="{{ .Type }}"{{ end }}>
 
 
 {{ partial "banner.html" . }}
 
 <div id="maincontent" role="main" class="clearfix">
     <div class="container docs-container">
-            <span class="sr-only presentation">.</span><!-- to fix some weirdness in VoiceOver -->
+            <span class="sr-only" role="presentation">&nbsp;</span><!-- to fix some weirdness in VoiceOver -->
             <h1 id="page-title">{{ if .IsHome }}Welcome to {{ .Site.Title }}{{ else }}{{ .Title }}{{ end }}</h1>
