URL changes in the menu

--- a/layouts/partials/cover.html
+++ b/layouts/partials/cover.html
@@ -12,8 +12,8 @@
 
 <h3>Let's get started:</h3>
 <ul class="module_list">
-    <li>Module 1: <a href="/young-children/population-overview/">Young Children</a></li>
-    <li>Module 2: <a href="javascript://">Adolescents</a></li>
+    <li>Module 1: <a href="/young-children/introduction/">Young Children</a></li>
+    <li>Module 2: <a href="/adolescents/introduction/">Adolescents</a></li>
     <li>Module 3: <a href="javascript://">Rural Populations</a></li>
     <li>Module 4: <a href="javascript://">Older Adults</a></li>
     <li>Module 5: <a href="javascript://">Special Needs</a></li>
