--- a/static/css/main.css
+++ b/static/css/main.css
@@ -103,3 +103,81 @@ a:visited
     font-weight: bold;
     margin-bottom: 10px;
 }
+
+
+/* Module 5 Pre-visit quizblock modification */
+
+.mod5-previsit .moretoggle {
+    display: none;
+}
+
+.mod5-previsit .casesanswerdisplay {
+    display: none;
+    border: none;
+    margin-top: 10px
+}
+
+.mod5-previsit .casequestionexplanationheader {
+    display: block;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.mod5-previsit div.q-mod5 {
+    font-size: 40px;
+    float: left;
+    font-weight: bold;
+    margin-top: 10px;
+    margin-left: 5px;
+    display: block;
+}
+
+.mod5-previsit .question-text {
+    min-height: 35px;
+    padding: 10px 0 0 10px;
+    float: left;
+    margin-top: 10px;
+}
+
+.mod5-previsit .cases {
+    border: none;
+}
+
+.mod5-previsit .casetitle {
+    display: none;
+}
+
+.mod5-previsit textarea {
+    height: 80px;
+    width: 100% !important;
+}
+
+.mod5-previsit textarea[disabled='disabled'] {
+    margin-top: 5px;
+    border-color: #e6f2d8;
+    background-color: #e6f2d8;
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
+    -moz-border-top-left-radius: 6px;
+    -moz-border-top-right-radius: 6px;
+    -webkit-border-top-left-radius: 6px;
+    -webkit-border-top-right-radius: 6px;
+}
+
+.mod5-previsit .response-heading {
+    color: #009999;
+    border-bottom: 1px solid #099;
+    margin: 0 0 10px 0 !important;
+    padding: 0 0 5px 0 !important;
+    font-weight: normal !important;
+    font-size: 16px !important;
+}
+
+.mod5-previsit .casequestionexplanationheader {
+    color: #333;
+    border-bottom: 1px solid #999;
+    margin: 0 0 10px 0 !important;
+    padding: 0 0 5px 0 !important;
+    font-weight: normal !important;
+    font-size: 16px !important;
+}
