Content from export, shortcodes for interactives

--- a/layouts/partials/cover.html
+++ b/layouts/partials/cover.html
@@ -14,7 +14,7 @@
 <ul class="module_list">
     <li>Module 1: <a href="/young-children/introduction/">Young Children</a></li>
     <li>Module 2: <a href="/adolescents/introduction/">Adolescents</a></li>
-    <li>Module 3: <a href="javascript://">Rural Populations</a></li>
-    <li>Module 4: <a href="javascript://">Older Adults</a></li>
-    <li>Module 5: <a href="javascript://">Special Needs</a></li>
+    <li>Module 3: <a href="/rural-populations/introduction/">Rural Populations</a></li>
+    <li>Module 4: <a href="/older-adults/introduction/">Older Adults</a></li>
+    <li>Module 5: <a href="/special-needs/introduction/">Special Needs</a></li>
 </ul>
