--- a/themes/ctl-book/layouts/partials/header.html
+++ b/themes/ctl-book/layouts/partials/header.html
@@ -36,7 +36,17 @@
 
 {{ partial "banner.html" . }}
 
-<div id="maincontent" role="main" class="clearfix">
-    <div class="container docs-container">
+<div class="row container docs-container">
+    {{ if .IsHome }}
+    <div class="col-lg-12 content">
+    {{ end }}
+    {{ if .IsPage }}
+    {{ if eq .Type "module-page" }}
+    <div class="col-lg-10 content">
+    {{ else }}
+    <div class="col-lg-12 content">
+    {{ end }}
+    {{ end }}
+        <div id="maincontent" role="main" class="clearfix">
             <span class="sr-only" role="presentation">&nbsp;</span><!-- to fix some weirdness in VoiceOver -->
             <h1 id="page-title">{{ if .IsHome }}Welcome to {{ .Site.Title }}{{ else }}{{ .Title }}{{ end }}</h1>
