Fresh export of content, and side menu

--- a/themes/ctl-book/layouts/partials/sidenav.html
+++ b/themes/ctl-book/layouts/partials/sidenav.html
@@ -1,9 +1,15 @@
+<!-- sidebar menu start-->
 <div class="col-lg-2 sidenav clearfix">
-{{ $thisSection := .Section }}
-    <ul class="nav">
+    {{ $currentNode := . }}
+    {{ $thisSection := replace .Section "-" "_" }}
     
-    {{ range after 1 ( where .Site.Pages.ByWeight "Section" $thisSection ) }}
-    <li><a href="{{ .Permalink }}" {{ if .Params.depth }}class="depth-{{ .Params.depth }}"{{ end }}>{{ .Weight }}. {{ .Title }}</a></li>
-    {{ end }}
+    {{ range (index .Site.Menus $thisSection) }}
+        {{ if .HasChildren }}
+    <ul class="nav">
+        {{ range .Children }}
+        <li{{if $currentNode.IsMenuCurrent $thisSection . }} class="active"{{end}}><a href="{{.URL}}"> {{ .Name }} </a> </li>
+        {{ end }}
     </ul>
-  </div>
+        {{end}}
+    {{end}}
+</div>
