--- a/themes/ctl-book/layouts/partials/header.html
+++ b/themes/ctl-book/layouts/partials/header.html
@@ -36,7 +36,7 @@
 
 {{ partial "banner.html" . }}
 
-<div class="row container docs-container">
+<div class="row container docs-container clearfix">
     {{ if .IsHome }}
     <div class="col-lg-12 content">
     {{ end }}
