remove 'index.html' from the interactive shortcode generation. this allows parameters to be added.

--- a/themes/ctl-book/layouts/shortcodes/interactives.html
+++ b/themes/ctl-book/layouts/shortcodes/interactives.html
@@ -1,5 +1,5 @@
 <div class="iframe-embed">
-	<iframe src='/lib/{{ .Get "url" }}/index.html' 
+	<iframe src='/lib/{{ .Get "url" }}'
 		width='{{ .Get "width" }}'
 		height='{{ .Get "height" }}'
 	></iframe>
