Changing sidemenu based on sizes of devices, and height of content

--- a/themes/ctl-book/layouts/partials/footer.html
+++ b/themes/ctl-book/layouts/partials/footer.html
@@ -21,41 +21,20 @@
         </ul>
     </div>
 </footer>
-<div id="winSize"></div>
 
 </body>
 
 <!-- Javascript -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<script type="text/javascript">
-    jQuery(document).ready(function() {
-   var WindowsSize=function(){
-        var h=$(window).height(),
-            w=$(window).width();
-        $("#winSize").html("<p>Width: "+w+"<br>Height: "+h+"</p>");
-    };
-   $(document).ready(function(){WindowsSize();}); 
-   $(window).resize(function(){WindowsSize();}); 
-    });
-
-$(document).ready(function(){
-	$('#toggle-sidenav a').click(function(evt){
-		$('#sidenav-icon').toggleClass('open');
-		$( "#section-list" ).animate({height: 'toggle'},200);
-		return false;
-		evt.stopPropagation();
-	});
-	$('body').click(function(){
-	    if ($('#module-name-toggle').is(":visible")) {
-	    if ($( "#section-list" ).is(":visible")) {
-		$('#sidenav-icon').toggleClass('open');
-		$( "#section-list" ).animate({height: 'toggle'},200);
-		}
-		}
-	});
-});
-</script>
-<script src="{{ .Site.BaseURL }}js/main.js" type="text/javascript" language="javascript"></script>
+<script src="{{ .Site.BaseURL }}js/src/main.js" type="text/javascript" language="javascript"></script>
+{{ if .IsHome }}
+{{ end }}
+{{ if .IsPage }}
+{{ if eq .Type "module-page" }}
+<script src="{{ .Site.BaseURL }}js/src/sidemenu.js" type="text/javascript" language="javascript"></script>
+{{ else }}
+{{ end }}
+{{ end }}
 
 </html>
