--- a/themes/ctl-book/static/css/theme.css
+++ b/themes/ctl-book/static/css/theme.css
@@ -325,12 +325,13 @@ header.container {
 /* Page body -------------------------------------------------------------- */
 
 .docs-container {
-    background-color: #fff;
+    /*background-color: #fff;*/
+    background-color: #b6d8db;
     position: relative;
-    padding: 0 10px 25px 10px;
+    /*padding: 0 10px 25px 10px;*/
+    padding: 0 10px 0 10px;
     padding-right: 0;
     padding-left: 0;
-    min-height: 600px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -347,6 +348,11 @@ header.container {
 .pageblock {
     padding: 0 0 1em 0;
     display: block;
+}
+
+.content {
+    background-color: #fff;
+    min-height: 550px;
 }
 
 #winSize {
@@ -443,7 +449,8 @@ header.container {
         height: 80px;
     }    
     .docs-container {
-        padding: 0 25px 25px 25px;
+        /*padding: 0 25px 25px 25px;*/
+        padding: 0 25px 0 25px;
         padding-right: 0;
         padding-left: 0;
     }
@@ -466,7 +473,8 @@ header.container {
         opacity: 0;
     }
     .docs-container {
-        padding: 0 15px 25px 15px;
+        /*padding: 0 15px 25px 15px;*/
+        padding: 0 15px 0 15px;
         padding-right: 0;
         padding-left: 0;
     }
@@ -477,6 +485,7 @@ header.container {
     .module-page .content {
         margin-right: -100%;
         margin-left: 195px;
+        background-color: #fff;
     }
     .sidenav {
         width: 195px;
@@ -484,7 +493,6 @@ header.container {
     #section-list {
         display: block !important;
         box-shadow: none !important;
-        padding-bottom: 0;
     }
 }
 
