migrate table styles

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -30,6 +30,68 @@ a:visited
 	text-decoration: none;
 }
 
+/* pull quote */
+.pullquote
+{
+    display: block;
+    margin: 10px 0;
+    padding: 38px 45px 10px;
+    background-color: #fff;
+}
+
+.pullquote .source, .source
+{
+    font-size: 90%;
+    font-style: italic;
+}
+
+.large-pullquote .pullquote {
+    display: block;
+    margin: 10px 0;
+    padding: 38px 45px 10px;
+    background-color: #fff;
+    background: url("../img/quotes.png") no-repeat scroll left top transparent;
+}
+
+/* Table styles */
+table
+{
+    margin: 0 0 1em 0;
+    padding: 0;
+    border: 1px solid #ccc;
+    border-collapse: collapse;
+    font-size: 100%;
+}
+
+table.noborders,
+table.noborders td
+
+{
+    border: none;
+    padding: 10px;
+    vertical-align: top;
+}
+
+table tbody
+{
+    border: 0;
+}
+
+th
+{
+    border: 1px solid #999;
+    border-collapse: collapse;
+    padding: 5px;
+}
+
+td
+{
+    border: 1px solid #999;
+    border-collapse: collapse;
+    padding: 5px;
+}
+
+
 /* Case quizzes */
 
 .cases {
