--- a/themes/ctl-book/layouts/partials/footer.html
+++ b/themes/ctl-book/layouts/partials/footer.html
@@ -33,6 +33,7 @@
 {{ if .IsPage }}
 {{ if eq .Type "module-page" }}
 <script src="{{ .Site.BaseURL }}js/src/sidemenu.js" type="text/javascript" language="javascript"></script>
+<script src="{{ .Site.BaseURL }}js/src/quiz.js" type="text/javascript" language="javascript"></script>
 {{ else }}
 {{ end }}
 {{ end }}
