--- a/themes/ctl-book/layouts/shortcodes/interactives.html
+++ b/themes/ctl-book/layouts/shortcodes/interactives.html
@@ -1,6 +1,5 @@
-<div class="iframe-embed">
-	<iframe src='/lib/{{ .Get "url" }}'
-		width='{{ .Get "width" }}'
-		height='{{ .Get "height" }}'
+<div class='iframe-embed {{ .Get "mediadevice" }} {{ .Get "name" }}'>
+	<iframe src='/lib/{{ .Get "name" }}'
+		frameborder=0
 	></iframe>
 </div>
