--- a/static/css/main.css
+++ b/static/css/main.css
@@ -338,3 +338,23 @@ td
     font-size: 18px;
     margin-bottom: 10px;
 }
+
+
+/* Interactives embed ----------------------------------------------------- */
+
+@media (min-width: 768px) {
+    .specialneedsvisit iframe {
+        height: 960px;
+    }
+}
+@media (min-width: 992px) {
+    .specialneedsvisit iframe {
+        height: 860px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .specialneedsvisit iframe {
+        height: 860px;
+    }
+}
