styling of interactives

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -346,10 +346,16 @@ td
     .specialneedsvisit iframe {
         height: 960px;
     }
+    .supportservices iframe {
+        height: 770px;
+    }
 }
 @media (min-width: 992px) {
     .specialneedsvisit iframe {
         height: 860px;
+    }
+    .supportservices iframe {
+        height: 700px;
     }
 }
 
