Dresser activity styling

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -343,6 +343,9 @@ td
 /* Interactives embed ----------------------------------------------------- */
 
 @media (min-width: 768px) {
+    .elderissues iframe {
+        height: 700px;
+    }
     .specialneedsvisit iframe {
         height: 960px;
     }
